apps/homeassistant/sts-matter.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: matter
  name: matter
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matter
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"macvlan-dhcp","namespace":"kube-system"}]'
      labels:
        app: matter
      name: matter
    spec:
      containers:
        - args:
            - --storage-path
            - /data
            - --paa-root-cert-dir
            - /data/credentials
            - --primary-interface
            - net1
          image: ghcr.io/matter-js/python-matter-server:8.1
          name: matter
          volumeMounts:
            - mountPath: /data
              name: data
        - env:
            - name: RESTIC_DATA_DIR
              value: /data
            - name: BACKUP_SOURCE
              value: /data
            - name: RESTIC_REPOSITORY
              value: s3:https://s3.eu-central-2.wasabisys.com/backup.f9k.dev/restic
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: AWS_ACCESS_KEY_ID
                  name: homeassistant-secrets
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: AWS_SECRET_ACCESS_KEY
                  name: homeassistant-secrets
            - name: RESTIC_INSTANT_BACKUP
              value: "0"
            - name: RESTIC_HOST
              value: matter
            - name: BACKUP_CRON
              value: 0 */1 * * *
            - name: RESTIC_FORGET_ARGS
              value: --keep-hourly 24 --keep-daily 7 --keep-weekly 4 --keep-monthly 4
          image: hub.f9k.dev/restic-sidecar
          imagePullPolicy: Always
          name: restic
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matter
