apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - name: ui
      port: 80
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: matter
  namespace: homeassistant
  labels:
    app: matter
spec:
  selector:
    app: matter
  ports:
    - name: matter
      port: 80
      targetPort: 5580
---
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: homeassistant
  labels:
    app: node-red
spec:
  selector:
    app: node-red
  ports:
    - name: ui
      port: 80
      targetPort: 1880
