apps/homeassistant/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-route
  namespace: homeassistant
spec:
  hostnames:
    - homeassistant.${GATEWAY_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homeassistant
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red-route
  namespace: homeassistant
spec:
  hostnames:
    - node-red.${GATEWAY_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: node-red
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
